--- a/src/pages/pos/bill.css
+++ b/src/pages/pos/bill.css
@@ -17,7 +17,7 @@ height: 100vh;
 }
 .bill-child-3{
     grid-area: 3 / 1 / 7 / 6;
-    background-color: yellow;
+    background-color: rgb(255, 255, 255);
 }
 
 
@@ -51,10 +51,13 @@ height: 100vh;
     font-size: 20px;
     font-weight: 500;
     color: var(--text-color);
+    width: 100px;
+    
 }
 .sale-input{
     width: 250px;
     height: 30px;
+    border-radius: 5px;
 }
 
 .sale-bill-add-btn{
@@ -134,4 +137,100 @@ height: 100vh;
 .sale-bill-values{
     font-size: 20px;
     color: var(--text-color);
+}
+
+
+
+
+
+
+
+
+
+
+
+.bill-head-div{
+    display: flex;
+    justify-content: space-around;
+    height: 40px;
+    align-items: center;
+}
+
+
+.bill-item{
+    width: 250px;
+    font-size: 18px;
+    font-weight: 500;
+    text-align: center;
+}
+.bill-qty{
+    width: 100px;
+    font-size: 18px;
+    font-weight: 500;
+    text-align: center;
+}
+.bill-price{
+    width: 100px;
+    font-size: 18px;
+    font-weight: 500;
+    text-align: center;
+}
+.bill-total{
+    width: 100px;
+    font-size: 18px;
+    font-weight: 500;
+    text-align: center;
+}
+.bill-option{
+    width: 100px;
+    font-size: 18px;
+    font-weight: 500;
+    text-align: center;
+}
+
+
+
+.bill-head-div-values{
+    display: flex;
+    justify-content: space-around;
+
+    background-color: aliceblue;
+    height: 40px;
+    align-items: center;
+    -webkit-box-shadow: 1px 3px 13px -7px rgba(0,0,0,1);
+-moz-box-shadow: 1px 3px 13px -7px rgba(0,0,0,1);
+box-shadow: 1px 3px 13px -7px rgba(0,0,0,1);
+}
+
+
+.bill-item-values{
+    background-color: aliceblue;
+    width: 250px;
+    font-size: 18px;
+    font-weight: 500;
+    text-align: center;
+}
+.bill-qty-values{
+    width: 100px;
+    font-size: 18px;
+    font-weight: 500;
+    text-align: center;
+}
+.bill-price-values{
+    width: 100px;
+    font-size: 18px;
+    font-weight: 500;
+    text-align: center;
+}
+.bill-total-values{
+    width: 100px;
+    font-size: 18px;
+    font-weight: 500;
+    text-align: center;
+}
+.bill-option-values{
+    width: 100px;
+    font-size: 18px;
+    font-weight: 500;
+    text-align: center;
 }
