--- a/src/pages/supplier/supplier.css
+++ b/src/pages/supplier/supplier.css
@@ -91,5 +91,157 @@ height: 100vh;
     background-color: #0d6efd;
     border-color: #0d6efd;
 }
+.supplier-update-button{
+    cursor: pointer;
+    outline: 0;
+    display: inline-block;
+    font-weight: 400;
+    line-height: 1.5;
+    text-align: center;
+    background-color: transparent;
+    border: 1px solid transparent;
+    padding: 10px 24px;
+    font-size: 20px;
+    border-radius: 10px;
+    transition: color .15s ease-in-out,
+    background-color .15s ease-in-out,
+    border-color .15s ease-in-out,
+    box-shadow .15s ease-in-out;
+    color: var(--text-color);
+    background-color: var(--main-color);
+    border-color:white;
+
+}
+.supplier-update-button:hover {
+    color: #fff;
+    background-color: #0d6efd;
+    border-color: #0d6efd;
+}
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.supplier-view-div{
+    margin: 5px;
+    background-color: #fff;
+    width: 99%;
+    height: 97%;
+}
+.supplier-view-div-header{
+    display: flex;
+    justify-content: space-around;
+    height: 40px;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.supplier-name{
+    width: 250px;
+    font-size: 18px;
+    font-weight: 500;
+    text-align: center;
+}
+.supplier-address{
+    width: 100px;
+    font-size: 18px;
+    font-weight: 500;
+    text-align: center;
+}
+.supplier-contact{
+    width: 100px;
+    font-size: 18px;
+    font-weight: 500;
+    text-align: center;
+}
+.supplier-email{
+    width: 100px;
+    font-size: 18px;
+    font-weight: 500;
+    text-align: center;
+}
+.supplier-nic{
+    width: 100px;
+    font-size: 18px;
+    font-weight: 500;
+    text-align: center;
+}
+.supplier-action{
+    width: 100px;
+    font-size: 18px;
+    font-weight: 500;
+    text-align: center;
+}
+
+
+.supplier-view-div-value{
+    display: flex;
+    justify-content: space-around;
+    height: 40px;
+    align-items: center;
+    margin-bottom: 10px;
+    background-color: aliceblue;
+    -webkit-box-shadow: 1px 3px 13px -7px rgba(0,0,0,1);
+-moz-box-shadow: 1px 3px 13px -7px rgba(0,0,0,1);
+box-shadow: 1px 3px 13px -7px rgba(0,0,0,1);
+}
+
+.supplier-name-value{
+    width: 250px;
+    font-size: 18px;
+    font-weight: 500;
+    text-align: center;
+}
+.supplier-address-value{
+    width: 100px;
+    font-size: 18px;
+    font-weight: 500;
+    text-align: center;
+}
+.supplier-contact-value{
+    width: 100px;
+    font-size: 18px;
+    font-weight: 500;
+    text-align: center;
+}
+.supplier-email-value{
+    width: 100px;
+    font-size: 18px;
+    font-weight: 500;
+    text-align: center;
+}
+.supplier-nic-value{
+    width: 100px;
+    font-size: 18px;
+    font-weight: 500;
+    text-align: center;
+}
+.supplier-action-value{
+    width: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.edite-img{
+    width: 30px;
+    height: 30px;
+    margin-left: 10px;
+}
+.delete-img{
+    width: 30px;
+    height: 30px;
+    margin-top: 5px;
+    margin-right: 10px;
+}
