--- a/src/pages/customer/customer.css
+++ b/src/pages/customer/customer.css
@@ -152,31 +152,31 @@ height: 100vh;
 }
 
 .customer-name{
-    width: 250px;
+    width: 100px;
     font-size: 18px;
     font-weight: 500;
     text-align: center;
 }
 .customer-address{
-    width: 100px;
+    width: 250px;
     font-size: 18px;
     font-weight: 500;
     text-align: center;
 }
 .customer-contact{
-    width: 100px;
+    width: 200px;
     font-size: 18px;
     font-weight: 500;
     text-align: center;
 }
 .customer-email{
-    width: 100px;
+    width: 200px;
     font-size: 18px;
     font-weight: 500;
     text-align: center;
 }
 .customer-nic{
-    width: 100px;
+    width: 150px;
     font-size: 18px;
     font-weight: 500;
     text-align: center;
@@ -192,7 +192,7 @@ height: 100vh;
 .customer-view-div-value{
     display: flex;
     justify-content: space-around;
-    height: 40px;
+    height: 43px;
     align-items: center;
     margin-bottom: 10px;
     background-color: aliceblue;
@@ -202,31 +202,34 @@ box-shadow: 1px 3px 13px -7px rgba(0,0,0,1);
 }
 
 .customer-name-value{
-    width: 250px;
-    font-size: 18px;
+    width: 100px;
+    font-size: 16px;
     font-weight: 500;
     text-align: center;
+    overflow: hidden;
 }
 .customer-address-value{
-    width: 100px;
-    font-size: 18px;
+    width: 250px;
+    font-size: 15px;
     font-weight: 500;
     text-align: center;
+    overflow: hidden;
 }
 .customer-contact-value{
-    width: 100px;
+    width: 200px;
     font-size: 18px;
     font-weight: 500;
     text-align: center;
+    overflow: hidden;
 }
 .customer-email-value{
-    width: 100px;
+    width: 200px;
     font-size: 18px;
     font-weight: 500;
     text-align: center;
 }
 .customer-nic-value{
-    width: 100px;
+    width: 150px;
     font-size: 18px;
     font-weight: 500;
     text-align: center;
