--- a/src/pages/pos/bill.css
+++ b/src/pages/pos/bill.css
@@ -236,3 +236,8 @@ box-shadow: 1px 3px 13px -7px rgba(0,0,0,1);
     font-weight: 500;
     text-align: center;
 }
+.bill-delete-img{
+    height: 30px;
+    width: 30px;
+    margin-left: 30px;
+}
