--- a/src/components/dashboad components/details_bar/details_bar.css
+++ b/src/components/dashboad components/details_bar/details_bar.css
@@ -1,5 +1,7 @@
 .details_bar{
     display: flex;
     justify-content: space-around;
-    background-color: yellowgreen;
+    background-color: var(--accent-color);
+    margin: 10px 20px;
+    border-radius: 10px;
 }
