--- a/src/pages/dashboad/dashboad.css
+++ b/src/pages/dashboad/dashboad.css
@@ -10,3 +10,11 @@
     color: var(--text-color) ;
     text-align: center;
 }
+
+
+
+.dashboad-chart{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
