--- a/src/pages/bills/bills.css
+++ b/src/pages/bills/bills.css
@@ -63,6 +63,32 @@ margin: 10px 5%;
     justify-content: space-between;
     width: 250px;
 }
+.bills-search-btn{
+    cursor: pointer;
+    outline: 0;
+    display: inline-block;
+    font-weight: 400;
+    line-height: 1.5;
+    text-align: center;
+    background-color: transparent;
+    border: 1px solid transparent;
+    padding: 7px 20px;
+    font-size: 18px;
+    border-radius: 10px;
+    transition: color .15s ease-in-out,
+    background-color .15s ease-in-out,
+    border-color .15s ease-in-out,
+    box-shadow .15s ease-in-out;
+    color: var(--text-color);
+    background-color: var(--main-color);
+    border-color:white;
+   
+}
+.bills-search-btn:hover{
+    color: #fff;
+    background-color: #06295d;
+    border-color: #0a3475;
+}
 
 
 
