--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -26,7 +26,19 @@
     border-radius: 5px;
     margin: 10px 20px;
     padding: 5px 40px;
-    transition-delay: 0.08s;
+    transition: 0.4s;
+}
+.sidebar-link-dashboad-active{
+    font-size: 23px;
+    font-weight: 500;
+    color: var(--text-color);
+    border: 1px solid white;
+    border-radius: 5px;
+    margin: 10px 20px;
+    padding: 5px 40px;
+    background-color: rgba(180, 239, 239, 0.479)
+
+    
 }
 
 .sidebar-link-dashboad:hover{
