--- a/src/pages/pos/bill.css
+++ b/src/pages/pos/bill.css
@@ -164,6 +164,28 @@ height: 100vh;
     font-size: 20px;
     color: var(--text-color);
 }
+.sale-bill-payment-method-div{
+    display: flex;
+    height: 50px;
+    justify-content: space-between;
+    width: 90px;
+}
+
+.sale-bill-img-oncash, .sale-bill-img-oncredite{
+    width: 40px ;
+    height: 40px;
+    background-color: rgba(240, 248, 255, 0.338);
+    padding:5px;
+    border-radius: 5px;
+}
+.sale-bill-img-oncash-active, .sale-bill-img-oncredite-active{
+    width: 40px ;
+    height: 40px;
+    background-color: rgba(240, 248, 255, 0.75);
+    padding:5px;
+    border-radius: 5px;
+}
+
 
 
 
