--- a/src/pages/customer/customer.css
+++ b/src/pages/customer/customer.css
@@ -15,6 +15,10 @@ height: 100vh;
     grid-area: 2 / 1 / 3 / 2;
    
 }
+.customer-view-container{
+    height: 100%;
+    overflow-y: scroll;
+}
 
 
 .customer-h1{
@@ -174,6 +178,7 @@ height: 100vh;
     font-size: 18px;
     font-weight: 500;
     text-align: center;
+    overflow: hidden;
 }
 .customer-nic{
     width: 150px;
@@ -223,10 +228,11 @@ box-shadow: 1px 3px 13px -7px rgba(0,0,0,1);
     overflow: hidden;
 }
 .customer-email-value{
-    width: 200px;
+    width: 290px;
     font-size: 18px;
     font-weight: 500;
     text-align: center;
+    overflow: hidden;
 }
 .customer-nic-value{
     width: 150px;
