--- a/src/pages/email/email.css
+++ b/src/pages/email/email.css
@@ -13,7 +13,10 @@ grid-row-gap: 0px;
         
      }
     .Email-div2 { grid-area: 3 / 1 / 7 / 2; }
-
+.email-view-container{
+    height: 63vh;
+    overflow-y: scroll;
+}
 
 .Email-input-div{
     width: 250px;
