--- a/src/pages/stock/stock.css
+++ b/src/pages/stock/stock.css
@@ -133,7 +133,10 @@ height: 100vh;
 
 
 
-
+.stock-view-div-container{
+    height: 85%;
+    overflow-y: scroll;
+}
 .stock-view-div{
     margin: 5px;
     background-color: #fff;
